// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MemberCelebrate renders correctly 1`] = `
<CelebrateFeed
  communityId="123"
  itemNamePressable={false}
  personId="1"
/>
`;

exports[`MemberCelebrate renders correctly for me 1`] = `
<CelebrateFeed
  communityId="123"
  itemNamePressable={false}
  personId="2"
/>
`;

exports[`MemberCelebrate renders correctly for me 2`] = `
<CelebrateFeed
  itemNamePressable={false}
  organization={
    Object {
      "id": "123",
    }
  }
  person={
    Object {
      "id": "1",
      "organizational_permission": Array [
        Object {
          "organization_id": "123",
          "permission_id": "3",
        },
      ],
      "organizational_permissions": Array [
        Object {
          "organization_id": "123",
          "permission_id": "3",
        },
      ],
    }
  }
/>
`;

exports[`MemberCelebrate renders correctly for owner 1`] = `
<CelebrateFeed
  communityId="123"
  itemNamePressable={false}
  personId="1"
/>
`;
